--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <ul type="none">
                 <li><a href="form.html" target="_blank">Visa application form</a></li>
                 <li><a href="form2.html" target="_blank">Student registration form</a></li>
-                <li><a href="form.html" target="_blank">Data about planets of our solar system</a></li>
+                <li><a href="table.html" target="_blank">Data about planets of our solar system</a></li>
                 <li><a href="table-2.html" target="_blank">Error rate in different forms</a></li>
             </ul>
             <span><h3>Reference images:</h3></span>
