--- a/form2.html
+++ b/form2.html
@@ -89,7 +89,7 @@ h1 {
 
     <main>
         <div id="imformation">
-            <form action="">
+            <form action="" id="form2">
                 <h2>Details</h2>
                 <section>
                     <span>first name</span><input type="text" placeholder="Enter your first name" required
