--- a/table-2.html
+++ b/table-2.html
@@ -5,6 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data table</title>
+    <style>
+         body {
+            background-color: aquamarine;
+        }
+
+        table {
+            margin-top: 10vh;
+            margin-left: 10vw;
+        }
+
+        .heading {
+            text-align: center;
+            font-size: 25px;
+            font-weight: 700;
+        }
+    </style>
     <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
 </head>
 
