--- a/table-2.html
+++ b/table-2.html
@@ -29,7 +29,7 @@
         <table border="" width="1000" hight="500">
             <thead>
                 <tr>
-                    <th colspan="7">The error rate on different forms</th>
+                    <th colspan="7"><span class="heading">The error rate on different forms</span></th>
                 </tr>
             </thead>
             <tbody>
