--- a/index.html
+++ b/index.html
@@ -122,17 +122,17 @@
         <br>
 
         <div id="div2">
-            <img src="/Projects/Screenshot (2).png" alt="A appliaction to apply Visa" height="120px"
+            <img src="Screenshot (2).png" alt="A appliaction to apply Visa" height="120px"
                 class="image">&nbsp;&nbsp;
 
-            <img src="/Projects/Screenshot (1).png" alt="Student registration form" height="120px"
+            <img src="Screenshot (1).png" alt="Student registration form" height="120px"
                 class="image">&nbsp;&nbsp;
 
 
-            <img src="/Projects/html2.png" alt="Error rate in different forms" height="120px" width="300px"
+            <img src="html2.png" alt="Error rate in different forms" height="120px" width="300px"
                 class="image">&nbsp;&nbsp;
 
-            <img src="/Projects/table.png" alt="Data about planets of our solar system" height="120px" width="300px"
+            <img src="table.png" alt="Data about planets of our solar system" height="120px" width="300px"
                 class="image">
         </div>
         <div>
