--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
         
         <h2>My projects:</h2>
 
-        <a href="/Projects/form.html" target="_blank" id="visa">Visa application form</a>
+        <a href="form.html" target="_blank" id="visa">Visa application form</a>
 
 
-        <a href="/projects/form2.html" target="_blank" id="form">Student registration form</a>
+        <a href="form2.html" target="_blank" id="form">Student registration form</a>
 
-        <a href="/projects/table.html" target="_blank" id="solars">Data about planets of our solar system</a>
+        <a href="table.html" target="_blank" id="solars">Data about planets of our solar system</a>
 
-        <a href="/projects/table-2.html" target="_blank" id="error">Error rate in different forms</a>
+        <a href="table-2.html" target="_blank" id="error">Error rate in different forms</a>
 
 
 
