--- a/form2.html
+++ b/form2.html
@@ -102,15 +102,15 @@ h1 {
     <main>
         <div id="imformation">
             <form action="" id="form2">
-                <h2>Details</h2>
+                <h2>Details-</h2>
                 <section>
-                    <span id="firstt" >first name</span><input type="text" placeholder="Enter your first name" required
+                    <span id="firstt" >first name:</span><input type="text" placeholder="Enter your first name" required
                         maxlength="20"><br>
-                    <span id="secondd">second name(If any)</span><input type="text" placeholder="Enter your second name" required
+                    <span id="secondd">second name:(If any)</span><input type="text" placeholder="Enter your second name" required
                         maxlength="20"><br>
-                    <span id="lastt">Last name</span><input type="text" placeholder="Enter your Last name" required
+                    <span id="lastt">Last name:</span><input type="text" placeholder="Enter your Last name" required
                         maxlength="20"><br>
-                    <span id="mobb">Mobile number</span><input type="text" placeholder="Enter  your mobile number" required
+                    <span id="mobb">Mobile number:</span><input type="text" placeholder="Enter  your mobile number" required
                         maxlength="10"><br>
 
                     <span id="gen">
@@ -120,7 +120,7 @@ h1 {
                     <input type="radio" id="female" name="gender"><label for="female">female</label>
                     <input type="radio" id="other" name="gender"><label for="other">other</label>
                     <br>
-                    <label for="dob"><span id="dobb">Date of birth(D.O.B)</span></label> <input type="date" id="dob">
+                    <label for="dob"><span id="dobb">Date of birth(D.O.B):</span></label> <input type="date" id="dob">
                     <br>
                 </section>
 
@@ -130,14 +130,14 @@ h1 {
                 
                 
                     <section>
-                <label for="address" class="add-label" id="addresss">Address</label><textarea name="address" id="address" cols="30" rows="5" class="input-vw" placeholder="Enter your address"></textarea><br>
+                <label for="address" class="add-label" id="addresss">Address:</label><textarea name="address" id="address" cols="30" rows="5" class="input-vw" placeholder="Enter your address"></textarea><br>
 
 
-                <label for="city" id="citt">City</label> <input type="text" placeholder="Enter your city name" id="city"><br>
-                <label for="pin" id="pinc">Pin code</label><input type="text" placeholder="Enter pin-code" id="pin"><br>
-                <label for="state" id="stat">State</label><input type="text" placeholder="Enter your state name" id="state"> <br>
+                <label for="city" id="citt">City:</label> <input type="text" placeholder="Enter your city name" id="city"><br>
+                <label for="pin" id="pinc">Pin code:</label><input type="text" placeholder="Enter pin-code" id="pin"><br>
+                <label for="state" id="stat">State:</label><input type="text" placeholder="Enter your state name" id="state"> <br>
 
-                <label for="country" id="cont">Country</label> <input type="text" id="country" placeholder="India"><br>
+                <label for="country" id="cont">Country:</label> <input type="text" id="country" placeholder="India"><br>
                 </section>
 
 
