--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
         body {
             background-color: rgb(163, 191, 213);
         }
-        #visa {
+
+        /* #visa {
             margin-left: 5px;
         }
+
         #form {
             margin-left: 94px;
         }
@@ -22,16 +24,20 @@
 
         #error {
             margin-left: 73px;
-        }
+        } */
 
         .image {
             margin-top: 5px;
-           padding: 5px;
+            padding: 5px;
             border: 2px none black;
             /* box-sizing: border-box;*/
-        } 
+        }
 
-        #div2 {
+        /* #div2 {
+            display: inline-block;
+        } */
+
+        .ulist {
             display: inline-block;
         }
     </style>
@@ -105,36 +111,27 @@
                 <li>Hard working</li>
             </ul>
         </div>
-        
+
         <h2>My projects:</h2>
-
-        <a href="form.html" target="_blank" id="visa">Visa application form</a>
-
-
-        <a href="form2.html" target="_blank" id="form">Student registration form</a>
-
-        <a href="table.html" target="_blank" id="solars">Data about planets of our solar system</a>
-
-        <a href="table-2.html" target="_blank" id="error">Error rate in different forms</a>
-
-
-
-        <br>
-
-        <div id="div2">
-            <img src="Screenshot (2).png" alt="A appliaction to apply Visa" height="120px"
-                class="image">&nbsp;&nbsp;
-
-            <img src="Screenshot (1).png" alt="Student registration form" height="120px"
-                class="image">&nbsp;&nbsp;
-
-
-            <img src="html2.png" alt="Error rate in different forms" height="120px" width="300px"
-                class="image">&nbsp;&nbsp;
-
-            <img src="table.png" alt="Data about planets of our solar system" height="120px" width="300px"
-                class="image">
-        </div>
+       <div>
+        <table>
+            <tr>
+                <th><a href="/Projects/form.html" target="_blank" id="visa">Visa application form</a></th>
+                <th><a href="/projects/form2.html" target="_blank" id="form">Student registration form</a></th>
+                <th><a href="/projects/table.html" target="_blank" id="solars">Data about planets of our solar system</a></th>
+                <th><a href="/projects/table-2.html" target="_blank" id="error">Error rate in different forms</a></th>
+            </tr>
+            <tr>
+                <td><img src="/Projects/Screenshot (1).png"" alt="A appliaction to apply Visa" height="120px" class="image"></td>
+                <td><img src="/Projects/Screenshot (2).png" alt="Student registration form" height="120px" class="image"></td>
+                <td><img src="/Projects/html2.png" alt="Error rate in different forms" height="120px" width="300px"
+                    class="image"></td>
+                <td><img src="/Projects/table.png" alt="Data about planets of our solar system" height="120px" width="300px"
+                    class="image"></td>
+            </tr>
+        </table>
+       </div> 
+       
         <div>
 
             <table>
