--- a/index.html
+++ b/index.html
@@ -116,17 +116,17 @@
        <div>
         <table>
             <tr>
-                <th><a href="/Projects/form.html" target="_blank" id="visa">Visa application form</a></th>
-                <th><a href="/projects/form2.html" target="_blank" id="form">Student registration form</a></th>
-                <th><a href="/projects/table.html" target="_blank" id="solars">Data about planets of our solar system</a></th>
-                <th><a href="/projects/table-2.html" target="_blank" id="error">Error rate in different forms</a></th>
+                <th><a href="form.html" target="_blank" id="visa">Visa application form</a></th>
+                <th><a href="form2.html" target="_blank" id="form">Student registration form</a></th>
+                <th><a href="table.html" target="_blank" id="solars">Data about planets of our solar system</a></th>
+                <th><a href="table-2.html" target="_blank" id="error">Error rate in different forms</a></th>
             </tr>
             <tr>
-                <td><img src="/Projects/Screenshot (1).png"" alt="A appliaction to apply Visa" height="120px" class="image"></td>
-                <td><img src="/Projects/Screenshot (2).png" alt="Student registration form" height="120px" class="image"></td>
-                <td><img src="/Projects/html2.png" alt="Error rate in different forms" height="120px" width="300px"
+                <td><img src="Screenshot (1).png" alt="A appliaction to apply Visa" height="120px" class="image"></td>
+                <td><img src="Screenshot (2).png" alt="Student registration form" height="120px" class="image"></td>
+                <td><img src="html2.png" alt="Error rate in different forms" height="120px" width="300px"
                     class="image"></td>
-                <td><img src="/Projects/table.png" alt="Data about planets of our solar system" height="120px" width="300px"
+                <td><img src="table.png" alt="Data about planets of our solar system" height="120px" width="300px"
                     class="image"></td>
             </tr>
         </table>
