--- a/index.html
+++ b/index.html
@@ -111,23 +111,24 @@
                 <li>Hard working</li>
             </ul>
         </div>
-
-        <h2>My projects:</h2>
+             <h2>My projects:</h2>
        <div>
-        <table>
+        <table width="800px">
             <tr>
                 <th><a href="form.html" target="_blank" id="visa">Visa application form</a></th>
                 <th><a href="form2.html" target="_blank" id="form">Student registration form</a></th>
                 <th><a href="table.html" target="_blank" id="solars">Data about planets of our solar system</a></th>
                 <th><a href="table-2.html" target="_blank" id="error">Error rate in different forms</a></th>
+                <th><a href="table style.html" target="_blank">A table containing CSS</a></th>
             </tr>
             <tr>
-                <td><img src="Screenshot (1).png" alt="A appliaction to apply Visa" height="120px" class="image"></td>
-                <td><img src="Screenshot (2).png" alt="Student registration form" height="120px" class="image"></td>
-                <td><img src="html2.png" alt="Error rate in different forms" height="120px" width="300px"
+                <td><img src="Screenshot (1).png"" alt="A appliaction to apply Visa" height="80px" class="image"></td>
+                <td><img src="Screenshot (2).png" alt="Student registration form" height="80px" class="image"></td>
+                <td><img src="html2.png" alt="Error rate in different forms" height="80px"
                     class="image"></td>
-                <td><img src="table.png" alt="Data about planets of our solar system" height="120px" width="300px"
+                <td><img src="table.png" alt="Data about planets of our solar system" height="80px"
                     class="image"></td>
+                    <td><img src="css table.png" alt="A table containing CSS" height="80px" class="image"></td>
             </tr>
         </table>
        </div> 
