--- a/table-2.html
+++ b/table-2.html
@@ -11,8 +11,7 @@
         }
 
         table {
-            margin-top: 10vh;
-            margin-left: 10vw;
+            margin: 50px auto;
         }
 
         .heading {
