--- a/table.html
+++ b/table.html
@@ -7,8 +7,7 @@
     <title>Table</title>
     <style>
         .table {
-            margin-left: 20vw;
-            margin-top: 15vh;
+            margin: 50px auto;
             text-align: center;
         }
 
